[Android] Fix Text selection with Stylus button pressed from Android M

Stylus text selection with stylus button pressed does not work from
Android M as the button state for stylus event has been changed. Add
code to support new button state - MotionEvent::BUTTON_STYLUS_PRIMARY.

BUG=721304

Review-Url: https://codereview.chromium.org/2874183002
Cr-Commit-Position: refs/heads/master@{#474141}

Former-commit-id: 529c2f2c71f13edbfd34df3c8c1129f39edaeb3f